# imageStitchingWithCaffe

./: Android_example.mk  Application_example.mk  README.md  gradle.properties  import-summary.txt  settings.gradle
android_caffe/: CMakeLists.txt  segmentator.hpp  segmentator_stitcher.cpp  segmentator_stitcher_jni.cpp  stitcher.cpp  stitcher.hpp  stitcher_jni.cpp
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/irina/test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MyLib.cpp  com_examle_test_MyNDK.h  mystitcher.h  mystitcher_jni.cpp  mystither.cpp
app/src/main/java/com/example/irina/test/: CNNListener.java  CaffeMobile.java  MainActivity.java  StitchActivity.java  Stitching.java
app/src/main/res/layout/: activity_main.xml  activity_stitch.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
